[project]
name = "michael-zhang-travel-agent"
version = "1.0.0"
description = "AI Travel Planning Agent for Michael Zhang's retirement travels"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.2.7",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.4.0",
    "openai>=1.54.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# UV-specific configuration
dev-dependencies = []
